--- a/gwb/WebContent/index.html
+++ b/gwb/WebContent/index.html
@@ -25,9 +25,9 @@
 	 <br>
 	 <table width="100%">
 	 	<tr align="center">
-	 		<td align="center" width="45%"><a href="http://fir.im/andgwb"><img src="images/android.png" width="100%"  alt="安卓微一宝下载" /></a></td>
+	 		<td align="center" width="45%"><a href="http://weebo.com.cn/gwb/apk/MainActivity.apk"><img src="images/android.png" width="100%"  alt="安卓微一宝下载" /></a></td>
 	 		<td align="center" width="10%"> </td>
-	 		<td align="center" width="45%"><a href="http://fir.im/gwb" ><img src="images/ios.png" width="100%"  alt="苹果微一宝下载" /></a></td>
+	 		<td align="center" width="45%"><a href="http://fir.im/gwb2" ><img src="images/ios.png" width="100%"  alt="苹果微一宝下载" /></a></td>
 	 	</tr>
 	 </table>
 	 
